Resolve redundant and infinite fetches, correctly merge data tags and remove overflow hidden in body and html

--- a/apps/admin/src/index.css
+++ b/apps/admin/src/index.css
@@ -119,7 +119,7 @@
 
   html,
   body {
-    @apply bg-background text-foreground m-0 p-0 overflow-y-hidden;
+    @apply bg-background text-foreground m-0 p-0;
   }
 }
 
